Added new Entities to Demo